# probabilistic_ca

./: .gitignore  README.md  ca_optimisation.ipynb  ca_utils.py  jax_ca_utils.py  jax_usage.ipynb  pyproject.toml
deprecated/: README.md  ca_utils.py  usage.ipynb
notebooks/: ca_optimisation.ipynb  usage.ipynb
probabilistic_ca/: __init__.py  metrics.py  model.py  state.py  utils.py
tests/: test_metrics.py  test_model.py  test_utils.py
